[workspace]

members = [
    "ch_01_hello",
    "ch_02_guessing_game",
    "ch_03_control_flow",
    "ch_04_ownership",
    "ch_04a_ownership_errors",
    "ch_04b_slice_type",
    "ch_05_struct",
    "ch_06_enum",
    "ch_06_enum_matching_pattern",
    "ch_07_packages",
    "ch_07a_restaurant",
    "ch_09_error_handling",
    "ch_10_generics",
    "ch_10a_traits",
    "ch_10b_lifetime",
    "ch_13_closure"
]

resolver = "2"
