[package]
name = "ch_10_generics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "method_definition"
path = "bin/t_00_method_definition.rs"

[[bin]]
name = "function_definition"
path = "bin/t_01_function_def.rs"

[dependencies]
