[package]
name = "ch_10a_traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trait_as_parameter"
path = "bin/t_00_trait_as_parameter.rs"

[[bin]]
name = "trait_bound_syntax"
path = "bin/t_01_trait_bound_syntax.rs"

[[bin]]
name = "trait_bound_syntax_using_where_clause"
path = "bin/t_02_trait_bound_syntax_using_where_clause.rs"

[dependencies]
