[package]
name = "ch_13a_iterator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "method_that_consume_iterator"
path = "bin/t_00_method_that_consume_iterator.rs"

[[bin]]
name = "method_that_produce_iterator"
path ="bin/t_01_method_that_produce_iterator.rs"


[dependencies]
